--- a/src/main/resources/messages/labels_sl.properties
+++ b/src/main/resources/messages/labels_sl.properties
@@ -1,7 +1,7 @@
 l1=Spoštovani uporabnik,
 l2=To sporočilo ste prejeli, ker ste se naročili na sporočila o spremembah iz platforme interoperabilnosti za eno ali več vsebin. Od orodij se lahko odjavite v razdelku Informacije o uporabniku. Oglejte si navodila <a href=\"https://vrk-ewiki.eden.csc.fi/pages/viewpage.action?pageId=61252403\">tukaj</a>.
 l3=Besednjaki
-l4=Referenčni podatki
+l4=Šifranti
 l5=Podatkovni besednjaki
 l6=Komentarji
 l7=To sporočilo je bilo poslano samodejno.Prosimo, da ne odgovarjate na sporočilo!
@@ -10,7 +10,7 @@ l9= podatki in status so se spremenili
 l10= podatki so se spremenili
 l11=material
 l12=besednjak
-l13=referenčni podatki
+l13=šifranti
 l14=knjižnica podatkovnih komponent
 l15=profil aplikacije
 l16=krog komentarjev
