links to finland manual removed

--- a/src/main/resources/messages/labels_en.properties
+++ b/src/main/resources/messages/labels_en.properties
@@ -1,5 +1,5 @@
 l1=Dear User,
-l2=You are receiving this message because you have subscribed to change messages from the Interoperability platform for one or more contents. You can unsubscribe from the tools in the User Information section. See the instructions <a href=\"https://vrk-ewiki.eden.csc.fi/pages/viewpage.action?pageId=61252403\">here</a>.
+l2=You are receiving this message because you have subscribed to change messages from the Interoperability platform for one or more contents. You can unsubscribe from the tools in the User Information section.
 l3=Vocabularies
 l4=Reference Data
 l5=Data Vocabularies
