--- a/src/main/resources/messages/labels_sl.properties
+++ b/src/main/resources/messages/labels_sl.properties
@@ -1,5 +1,5 @@
 l1=Spoštovani uporabnik,
-l2=To sporočilo ste prejeli, ker ste se naročili na sporočila o spremembah iz platforme interoperabilnosti za eno ali več vsebin. Od orodij se lahko odjavite v razdelku Informacije o uporabniku. Oglejte si navodila <a href=\"https://vrk-ewiki.eden.csc.fi/pages/viewpage.action?pageId=61252403\">tukaj</a>.
+l2=To sporočilo ste prejeli, ker ste se naročili na sporočila o spremembah iz platforme interoperabilnosti za eno ali več vsebin. Od orodij se lahko odjavite v razdelku Informacije o uporabniku.
 l3=Besednjaki
 l4=Šifranti
 l5=Podatkovni besednjaki
