--- a/src/main/resources/messages/labels_en.properties
+++ b/src/main/resources/messages/labels_en.properties
@@ -2,7 +2,7 @@ l1=Dear User,
 l2=You are receiving this message because you have subscribed to change messages from the Interoperability platform for one or more contents. You can unsubscribe from the tools in the User Information section.
 l3=Vocabularies
 l4=Reference Data
-l5=Data Vocabularies
+l5=Data models
 l6=Comments
 l7=This message has been sent automatically. You don't answer the message!
 l8= total change
