--- a/src/main/resources/messages/labels_sl.properties
+++ b/src/main/resources/messages/labels_sl.properties
@@ -12,7 +12,7 @@ l11=material
 l12=besednjak
 l13=šifranti
 l14=knjižnica podatkovnih komponent
-l15=profil aplikacije
+l15=aplikacijski profil
 l16=krog komentarjev
 l17=nit komentarjev
 l18=novi viri
